# sibarras-fib-rs

./: Cargo.toml  LICENSE  README.md  setup.py
sibarras_fib_rs/: __init__.py  counter.py  fib_number_adapter.py  fib_number_command.py  singleton.py
src/: lib.rs
src/fib_calcs/: fib_number.rs  fib_numbers.rs
